configuration/users-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: users-deployment
  namespace: k8s-parking-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: users
          image: mandockerhouse/users-develop.20190505.1.0.0
